hackthonflow/force-app/main/default/objects/Proposal__c/Proposal__c.object-meta.xml
<CustomObject>
    <label>Proposal</label>
    <nameField>
        <displayFormat>Prop-{000000}</displayFormat>
        <label>Proposal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>