hackthonflow/force-app/main/default/objects/Proposal__c/fields/Bscore__c.field-meta.xml
<CustomField>
    <fullName>Bscore__c</fullName>
    <label>Bscore</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>