hackthonflow/force-app/main/default/objects/Proposal__c/fields/Escore__c.field-meta.xml
<CustomField>
    <fullName>Escore__c</fullName>
    <label>Escore</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>