hackthonflow/force-app/main/default/objects/Proposal__c/fields/Lscore__c.field-meta.xml
<CustomField>
    <fullName>Lscore__c</fullName>
    <label>Lscore</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>