hackthonflow/force-app/main/default/objects/Proposal__c/fields/Party1_requirement__c.field-meta.xml
<CustomField>
    <fullName>Party1_requirement__c</fullName>
    <label>Party1 requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>