hackthonflow/force-app/main/default/objects/Proposal__c/fields/Party2_requirement__c.field-meta.xml
<CustomField>
    <fullName>Party2_requirement__c</fullName>
    <label>Party2 requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>