hackthonflow/force-app/main/default/objects/Proposal__c/fields/Scores_and_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Scores_and_Reasons__c</fullName>
    <label>Scores and Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>